refactor: Ball과 Lotto의 생성자를 위주로 리팩터링
- Ball을 LottoNumber로 변경
- LottoNumber와 Lotto의 생성자 파라미터 타입을 변경
- 숫자 유효성 검사를 분리하여 NumberValidator 생성
- 유효성 검사를 책임에 알맞은 곳으로 이동