@@ -3,6 +3,7 @@ package lotto.domain;
 import static org.junit.jupiter.api.Assertions.*;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
@@ -14,12 +15,12 @@ class LottoResultTest {
 
     @BeforeEach
     void init() {
-        Lotto lotto1 = new Lotto(Arrays.asList("1", "2", "3", "4", "5", "6"));
-        Lotto lotto2 = new Lotto(Arrays.asList("2", "3", "4", "5", "6", "7"));
-        Lotto lotto3 = new Lotto(Arrays.asList("3", "4", "5", "6", "7", "8"));
+        Lotto lotto1 = new Lotto(List.of(1, 2, 3, 4, 5, 6));
+        Lotto lotto2 = new Lotto(List.of(2, 3, 4, 5, 6, 7));
+        Lotto lotto3 = new Lotto(List.of(3, 4, 5, 6, 7, 8));
 
         lottos = new Lottos(Arrays.asList(lotto1, lotto2, lotto3));
-        winningLotto = new WinningLotto(lotto1, new Ball("7"));
+        winningLotto = new WinningLotto(lotto1, new LottoNumber(7));
     }
 
     @Test
