@@ -1,22 +1,20 @@
 package lotto.domain;
 
+import static org.junit.jupiter.api.Assertions.*;
+
+import java.util.List;
+
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-
-import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class LottosTest {
     private WinningLotto winningLotto;
 
     @BeforeEach
     void before() {
-        Lotto winLotto = new Lotto(Arrays.asList("1", "2", "3", "4", "5", "6"));
-        Ball bonusBall = new Ball("7");
+        Lotto winLotto = new Lotto(List.of(1, 2, 3, 4, 5, 6));
+        LottoNumber bonusBall = new LottoNumber(7);
         winningLotto = new WinningLotto(winLotto, bonusBall);
     }
 
